Image stretch issue resolved

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,7 +196,7 @@ strong {
     border-radius: 0.3rem 0.3rem 0 0;
     margin: 0 0 -0.28em 0;
     max-height: 10em;
-    /*object-fit: cover;*/
+    object-fit: cover; 
 }
 .card-img-overlay {
     border-radius: 0.3rem 0.3rem 0 0;
